--- a/index.html
+++ b/index.html
@@ -19,43 +19,45 @@
 <body>
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light">
-        <a class="navbar-brand" href="#">
-            <img src="images/logo_transparent2.png" alt="sumunara logo">
-            sumunara
-        </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
-            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
+        <div class="container">
+            <a class="navbar-brand" href="#">
+                <img src="images/logo_transparent2.png" alt="sumunara logo">
+                sumunara
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
-                </li>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav">
+                    <li class="nav-item active">
+                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                    </li>
 
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        What is sumunara?
-                    </a>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                            What is sumunara?
+                        </a>
 
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Service One</a>
-                        <a class="dropdown-item" href="#">Another service</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Yet another service</a>
-                    </div>
-                </li>
+                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <a class="dropdown-item" href="#">Service One</a>
+                            <a class="dropdown-item" href="#">Another service</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="#">Yet another service</a>
+                        </div>
+                    </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Sign up</a>
-                </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Sign up</a>
+                    </li>
 
-                <li class="nav-item">
-                    <a class="nav-link" href="#">Log in</a>
-                </li>
-            </ul>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Log in</a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </nav>
     <!-- Navbar -->
@@ -86,9 +88,9 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-4">
-                        <div class="card" style="width: 18rem;">
+                        <div class="card">
                             <img class="card-img-top" src="images/house-24px.svg" alt="house">
-                            <div class="card-body">
+                            <div class="card-body text-center">
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk
@@ -99,9 +101,9 @@
                     </div>
 
                     <div class="col-md-4">
-                        <div class="card" style="width: 18rem;">
+                        <div class="card">
                             <img class="card-img-top" src="images/house-24px.svg" alt="house">
-                            <div class="card-body">
+                            <div class="card-body text-center">
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk
@@ -112,9 +114,9 @@
                     </div>
 
                     <div class="col-md-4">
-                        <div class="card" style="width: 18rem;">
+                        <div class="card">
                             <img class="card-img-top" src="images/house-24px.svg" alt="house">
-                            <div class="card-body">
+                            <div class="card-body text-center">
                                 <h5 class="card-title">Card title</h5>
                                 <p class="card-text">Some quick example text to build on the card title and make up the
                                     bulk
@@ -142,76 +144,76 @@
         </div>
 
         <div class="container">
-            <div class="row">
-                <div class="media col col-md-5">
+            <div class="row justify-content-center">
+                <a href="#" class="media col col-md-5">
                     <img class="mr-3" src="https://source.unsplash.com/200x150/?castle" alt="Generic placeholder image">
 
-                    <div class="media-body">
-                        <h5 class="mt-0">Media heading</h5>
+                    <div class="media-body row">
+                        <h5 class="mt-3">Media heading</h5>
 
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem cumque praesentium nulla
                             nobis, harum illum.</p>
                     </div>
-                </div>
+                </a>
 
-                <div class="media col col-md-5">
+                <a href="#" class="media col col-md-5">
                     <img class="mr-3" src="https://source.unsplash.com/200x150/?castle" alt="Generic placeholder image">
 
-                    <div class="media-body">
-                        <h5 class="mt-0">Media heading</h5>
+                    <div class="media-body row">
+                        <h5 class="mt-3">Media heading</h5>
 
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem cumque praesentium nulla
                             nobis, harum illum.</p>
                     </div>
-                </div>
+                </a>
             </div>
 
-            <div class="row">
-                <div class="media col col-md-5">
+            <div class="row justify-content-center">
+                <a href="#" class="media col col-md-5">
                     <img class="mr-3" src="https://source.unsplash.com/200x150/?castle" alt="Generic placeholder image">
 
-                    <div class="media-body">
-                        <h5 class="mt-0">Media heading</h5>
+                    <div class="media-body row">
+                        <h5 class="mt-3">Media heading</h5>
 
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem cumque praesentium nulla
                             nobis, harum illum.</p>
                     </div>
-                </div>
+                </a>
 
-                <div class="media col col-md-5">
+                <a href="#" class="media col col-md-5">
                     <img class="mr-3" src="https://source.unsplash.com/200x150/?castle" alt="Generic placeholder image">
 
-                    <div class="media-body">
-                        <h5 class="mt-0">Media heading</h5>
+                    <div class="media-body row">
+                        <h5 class="mt-3">Media heading</h5>
 
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem cumque praesentium nulla
                             nobis, harum illum.</p>
                     </div>
-                </div>
+                </a>
             </div>
 
-            <div class="row">
-                <div class="media col col-md-5">
+            <div class="row justify-content-center">
+                <a href="#" class="media col col-md-5">
                     <img class="mr-3" src="https://source.unsplash.com/200x150/?castle" alt="Generic placeholder image">
 
-                    <div class="media-body">
-                        <h5 class="mt-0">Media heading</h5>
+                    <div class="media-body row">
+                        <h5 class="mt-3">Media heading</h5>
 
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem cumque praesentium nulla
                             nobis, harum illum.</p>
                     </div>
-                </div>
+                </a>
 
-                <div class="media col col-md-5">
+                <a href="#" class="media col col-md-5">
                     <img class="mr-3" src="https://source.unsplash.com/200x150/?castle" alt="Generic placeholder image">
 
-                    <div class="media-body">
-                        <h5 class="mt-0">Media heading</h5>
+                    <div class="media-body row">
+                        <h5 class="mt-3">Media heading</h5>
 
                         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem cumque praesentium nulla
                             nobis, harum illum.</p>
                     </div>
-                </div>
+                </a>
             </div>
         </div>
     </section>
@@ -220,6 +222,7 @@
     <!-- Footer -->
     <footer id="footer">
         <div class="container">
+            <!-- <div class="experiment"> -->
             <div class="row mx-auto justify-content-center">
                 <div class="col-3">
                     <h5>What is sumunara?</h5>
@@ -299,6 +302,12 @@
                     </ul>
                 </div>
             </div>
+
+            <div id="copyright" class="text-center row align-items-center">
+                <p>&copy; 2020 MAD Works, LLC</p>
+            </div>
+            <!-- </div> -->
+
         </div>
     </footer>
     <!-- Footer -->
