--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
-                    <li class="nav-item active">
+                    <li class="nav-item">
                         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                     </li>
 
@@ -81,13 +81,13 @@
     <!-- Section - What is sumunara -->
     <section id="what-is-sumunara">
         <div class="container">
-            <div class="h-300 row align-items-center justify-content-center">
+            <div class="h-200 row align-items-center justify-content-center text-center">
                 <h1>What is sumunara?</h1>
             </div>
 
             <div class="container">
                 <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-lg-4">
                         <div class="card">
                             <img class="card-img-top" src="images/house-24px.svg" alt="house">
                             <div class="card-body text-center">
@@ -100,7 +100,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-4">
+                    <div class="col-lg-4">
                         <div class="card">
                             <img class="card-img-top" src="images/house-24px.svg" alt="house">
                             <div class="card-body text-center">
@@ -113,7 +113,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-4">
+                    <div class="col-lg-4">
                         <div class="card">
                             <img class="card-img-top" src="images/house-24px.svg" alt="house">
                             <div class="card-body text-center">
@@ -137,83 +137,123 @@
 
     <!-- Section - Areas -->
     <section id="areas">
-        <div class="container">
-            <div class="h-200 row align-items-center justify-content-center">
+        <div class="container mx-auto">
+            <div class="h-200 row align-items-center justify-content-center text-center">
                 <h1>Lorem ipsum dolor sit amet.</h1>
             </div>
         </div>
 
-        <div class="container">
+        <div class="container mx-auto">
             <div class="row justify-content-center">
-                <a href="#" class="media col col-md-5">
-                    <img class="mr-3" src="https://source.unsplash.com/200x150/?castle" alt="Generic placeholder image">
+                <div class="col-lg-6">
+                    <div class="media mx-auto">
+                        <a href="#" class="row align-items-center">
+                            <img src="https://source.unsplash.com/400x300/?castle"
+                                class="img-fluid col-12 col-md-6 mx-auto" alt="Generic placeholder image">
 
-                    <div class="media-body row">
-                        <h5 class="mt-3">Media heading</h5>
+                            <div class="media-body row col-12 col-md-6 mx-auto">
+                                <h5 class="">Media heading</h5>
 
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem cumque praesentium nulla
-                            nobis, harum illum.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem cumque praesentium
+                                    nulla
+                                    nobis, harum illum.</p>
+                            </div>
+                        </a>
                     </div>
-                </a>
+                </div>
 
-                <a href="#" class="media col col-md-5">
-                    <img class="mr-3" src="https://source.unsplash.com/200x150/?castle" alt="Generic placeholder image">
+                <div class="col-lg-6">
+                    <div class="media mx-auto">
+                        <a href="#" class="row align-items-center">
+                            <img src="https://source.unsplash.com/400x300/?castle" class="img-fluid col-sm-6 mx-auto"
+                                alt="Generic placeholder image">
 
-                    <div class="media-body row">
-                        <h5 class="mt-3">Media heading</h5>
+                            <div class="media-body row col-sm-6 mx-auto">
+                                <h5 class="">Media heading</h5>
 
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem cumque praesentium nulla
-                            nobis, harum illum.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem cumque praesentium
+                                    nulla
+                                    nobis, harum illum.</p>
+                            </div>
+                        </a>
                     </div>
-                </a>
+                </div>
             </div>
+        </div>
 
+        <div class="container mx-auto">
             <div class="row justify-content-center">
-                <a href="#" class="media col col-md-5">
-                    <img class="mr-3" src="https://source.unsplash.com/200x150/?castle" alt="Generic placeholder image">
+                <div class="col-lg-6">
+                    <div class="media mx-auto">
+                        <a href="#" class="row align-items-center">
+                            <img src="https://source.unsplash.com/400x300/?castle"
+                                class="img-fluid col-12 col-md-6 mx-auto" alt="Generic placeholder image">
 
-                    <div class="media-body row">
-                        <h5 class="mt-3">Media heading</h5>
+                            <div class="media-body row col-12 col-md-6 mx-auto">
+                                <h5 class="">Media heading</h5>
 
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem cumque praesentium nulla
-                            nobis, harum illum.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem cumque praesentium
+                                    nulla
+                                    nobis, harum illum.</p>
+                            </div>
+                        </a>
                     </div>
-                </a>
+                </div>
 
-                <a href="#" class="media col col-md-5">
-                    <img class="mr-3" src="https://source.unsplash.com/200x150/?castle" alt="Generic placeholder image">
+                <div class="col-lg-6">
+                    <div class="media mx-auto">
+                        <a href="#" class="row align-items-center">
+                            <img src="https://source.unsplash.com/400x300/?castle" class="img-fluid col-sm-6 mx-auto"
+                                alt="Generic placeholder image">
 
-                    <div class="media-body row">
-                        <h5 class="mt-3">Media heading</h5>
+                            <div class="media-body row col-sm-6 mx-auto">
+                                <h5 class="">Media heading</h5>
 
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem cumque praesentium nulla
-                            nobis, harum illum.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem cumque praesentium
+                                    nulla
+                                    nobis, harum illum.</p>
+                            </div>
+                        </a>
                     </div>
-                </a>
+                </div>
             </div>
+        </div>
 
+        <div class="container mx-auto">
             <div class="row justify-content-center">
-                <a href="#" class="media col col-md-5">
-                    <img class="mr-3" src="https://source.unsplash.com/200x150/?castle" alt="Generic placeholder image">
+                <div class="col-lg-6">
+                    <div class="media mx-auto">
+                        <a href="#" class="row align-items-center">
+                            <img src="https://source.unsplash.com/400x300/?castle"
+                                class="img-fluid col-12 col-md-6 mx-auto" alt="Generic placeholder image">
 
-                    <div class="media-body row">
-                        <h5 class="mt-3">Media heading</h5>
+                            <div class="media-body row col-12 col-md-6 mx-auto">
+                                <h5 class="">Media heading</h5>
 
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem cumque praesentium nulla
-                            nobis, harum illum.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem cumque praesentium
+                                    nulla
+                                    nobis, harum illum.</p>
+                            </div>
+                        </a>
                     </div>
-                </a>
+                </div>
 
-                <a href="#" class="media col col-md-5">
-                    <img class="mr-3" src="https://source.unsplash.com/200x150/?castle" alt="Generic placeholder image">
+                <div class="col-lg-6">
+                    <div class="media mx-auto">
+                        <a href="#" class="row align-items-center">
+                            <img src="https://source.unsplash.com/400x300/?castle" class="img-fluid col-sm-6 mx-auto"
+                                alt="Generic placeholder image">
 
-                    <div class="media-body row">
-                        <h5 class="mt-3">Media heading</h5>
+                            <div class="media-body row col-sm-6 mx-auto">
+                                <h5 class="">Media heading</h5>
 
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem cumque praesentium nulla
-                            nobis, harum illum.</p>
+                                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem cumque praesentium
+                                    nulla
+                                    nobis, harum illum.</p>
+                            </div>
+                        </a>
                     </div>
-                </a>
+                </div>
             </div>
         </div>
     </section>
@@ -222,12 +262,11 @@
     <!-- Footer -->
     <footer id="footer">
         <div class="container">
-            <!-- <div class="experiment"> -->
-            <div class="row mx-auto justify-content-center">
-                <div class="col-3">
-                    <h5>What is sumunara?</h5>
+            <div class="row mx-auto justify-content-center pt-4">
+                <div class="col-sm-4 col-md-3 row justify-content-center">
+                    <h5 class="col-12">What is sumunara?</h5>
 
-                    <ul class="list-unstyled">
+                    <ul class="list-unstyled col-12">
                         <li>
                             <a href="#">Lorem ipsum dolor sit amet.</a>
                         </li>
@@ -250,10 +289,10 @@
                     </ul>
                 </div>
 
-                <div class="col-3">
-                    <h5>What is sumunara?</h5>
+                <div class="col-sm-4 col-md-3 row justify-content-center">
+                    <h5 class="col-12">What is sumunara?</h5>
 
-                    <ul class="list-unstyled">
+                    <ul class="list-unstyled col-12">
                         <li>
                             <a href="#">Lorem ipsum dolor sit amet.</a>
                         </li>
@@ -276,10 +315,10 @@
                     </ul>
                 </div>
 
-                <div class="col-3">
-                    <h5>What is sumunara?</h5>
+                <div class="col-sm-4 col-md-3 row justify-content-center">
+                    <h5 class="col-12">What is sumunara?</h5>
 
-                    <ul class="list-unstyled">
+                    <ul class="list-unstyled col-12">
                         <li>
                             <a href="#">Lorem ipsum dolor sit amet.</a>
                         </li>
@@ -306,8 +345,6 @@
             <div id="copyright" class="text-center row align-items-center">
                 <p>&copy; 2020 MAD Works, LLC</p>
             </div>
-            <!-- </div> -->
-
         </div>
     </footer>
     <!-- Footer -->
