Make index and results pages responsive / submit ver.1

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
+    <!-- <link rel="stylesheet" href="css/bootstrap.min.css"> -->
+
+    <!-- Bootstrap CDN -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
@@ -24,6 +27,7 @@
                 <img src="images/logo_transparent2.png" alt="sumunara logo">
                 sumunara
             </a>
+
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -35,18 +39,8 @@
                         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
                     </li>
 
-                    <li class="nav-item dropdown">
-                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
-                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                            What is sumunara?
-                        </a>
-
-                        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item" href="#">Service One</a>
-                            <a class="dropdown-item" href="#">Another service</a>
-                            <div class="dropdown-divider"></div>
-                            <a class="dropdown-item" href="#">Yet another service</a>
-                        </div>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">What is sumunara?</a>
                     </li>
 
                     <li class="nav-item">
@@ -88,7 +82,7 @@
             <div class="container">
                 <div class="row">
                     <div class="col-lg-4">
-                        <div class="card">
+                        <div class="card fade-in" data-delay="0s">
                             <img class="card-img-top" src="images/house-24px.svg" alt="house">
                             <div class="card-body text-center">
                                 <h5 class="card-title">Card title</h5>
@@ -101,7 +95,7 @@
                     </div>
 
                     <div class="col-lg-4">
-                        <div class="card">
+                        <div class="card fade-in" data-delay=".25s">
                             <img class="card-img-top" src="images/house-24px.svg" alt="house">
                             <div class="card-body text-center">
                                 <h5 class="card-title">Card title</h5>
@@ -114,7 +108,7 @@
                     </div>
 
                     <div class="col-lg-4">
-                        <div class="card">
+                        <div class="card fade-in" data-delay=".7s">
                             <img class="card-img-top" src="images/house-24px.svg" alt="house">
                             <div class="card-body text-center">
                                 <h5 class="card-title">Card title</h5>
@@ -128,7 +122,7 @@
                 </div>
             </div>
 
-            <div class="h-200 row align-items-center justify-content-center">
+            <div class="h-100px row align-items-center justify-content-center">
                 <button class="btn btn-warning">Learn more</button>
             </div>
         </div>
@@ -152,7 +146,7 @@
                                 class="img-fluid col-12 col-md-6 mx-auto" alt="Generic placeholder image">
 
                             <div class="media-body row col-12 col-md-6 mx-auto">
-                                <h5 class="">Media heading</h5>
+                                <h5 class="mt-2">Media heading</h5>
 
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem cumque praesentium
                                     nulla
@@ -169,7 +163,7 @@
                                 alt="Generic placeholder image">
 
                             <div class="media-body row col-sm-6 mx-auto">
-                                <h5 class="">Media heading</h5>
+                                <h5 class="mt-2">Media heading</h5>
 
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem cumque praesentium
                                     nulla
@@ -190,7 +184,7 @@
                                 class="img-fluid col-12 col-md-6 mx-auto" alt="Generic placeholder image">
 
                             <div class="media-body row col-12 col-md-6 mx-auto">
-                                <h5 class="">Media heading</h5>
+                                <h5 class="mt-2">Media heading</h5>
 
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem cumque praesentium
                                     nulla
@@ -207,7 +201,7 @@
                                 alt="Generic placeholder image">
 
                             <div class="media-body row col-sm-6 mx-auto">
-                                <h5 class="">Media heading</h5>
+                                <h5 class="mt-2">Media heading</h5>
 
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem cumque praesentium
                                     nulla
@@ -228,7 +222,7 @@
                                 class="img-fluid col-12 col-md-6 mx-auto" alt="Generic placeholder image">
 
                             <div class="media-body row col-12 col-md-6 mx-auto">
-                                <h5 class="">Media heading</h5>
+                                <h5 class="mt-2">Media heading</h5>
 
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem cumque praesentium
                                     nulla
@@ -245,7 +239,7 @@
                                 alt="Generic placeholder image">
 
                             <div class="media-body row col-sm-6 mx-auto">
-                                <h5 class="">Media heading</h5>
+                                <h5 class="mt-2">Media heading</h5>
 
                                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem cumque praesentium
                                     nulla
@@ -263,7 +257,7 @@
     <footer id="footer">
         <div class="container">
             <div class="row mx-auto justify-content-center pt-4">
-                <div class="col-sm-4 col-md-3 row justify-content-center">
+                <div class="col-md-3">
                     <h5 class="col-12">What is sumunara?</h5>
 
                     <ul class="list-unstyled col-12">
@@ -289,7 +283,7 @@
                     </ul>
                 </div>
 
-                <div class="col-sm-4 col-md-3 row justify-content-center">
+                <div class="col-md-3">
                     <h5 class="col-12">What is sumunara?</h5>
 
                     <ul class="list-unstyled col-12">
@@ -315,7 +309,7 @@
                     </ul>
                 </div>
 
-                <div class="col-sm-4 col-md-3 row justify-content-center">
+                <div class="col-md-3">
                     <h5 class="col-12">What is sumunara?</h5>
 
                     <ul class="list-unstyled col-12">
@@ -343,7 +337,7 @@
             </div>
 
             <div id="copyright" class="text-center row align-items-center">
-                <p>&copy; 2020 MAD Works, LLC</p>
+                <p><span id="year"></span> MAD Works, LLC</p>
             </div>
         </div>
     </footer>
@@ -360,6 +354,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+
+    <!-- <script src="js/bootstrap.min.js"></script> -->
 
     <script src="scripts/main.js"></script>
 </body>
