--- a/index.html
+++ b/index.html
@@ -16,16 +16,16 @@
     <link rel="icon" type="image/png" href="images/favicon.png">
     <link rel="stylesheet" href="./styles/style.css">
 
-    <title>sumunara</title>
+    <title>Sumunara</title>
 </head>
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg">
         <div class="container">
-            <a class="navbar-brand" href="#">
+            <a class="navbar-brand" href="index.html">
                 <img src="images/logo_transparent2.png" alt="sumunara logo">
-                sumunara
+                Sumunara
             </a>
 
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -36,11 +36,11 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                        <a class="nav-link" href="index.html">Home <span class="sr-only">(current)</span></a>
                     </li>
 
                     <li class="nav-item">
-                        <a class="nav-link" href="#">What is sumunara?</a>
+                        <a class="nav-link" href="#">What is Sumunara?</a>
                     </li>
 
                     <li class="nav-item">
@@ -72,7 +72,7 @@
     </section>
     <!-- Section - Home -->
 
-    <!-- Section - What is sumunara -->
+    <!-- Section - What is Sumunara -->
     <section id="what-is-sumunara">
         <div class="container">
             <div class="h-200 row align-items-center justify-content-center text-center">
@@ -127,7 +127,7 @@
             </div>
         </div>
     </section>
-    <!-- Section - What is sumunara -->
+    <!-- Section - What is Sumunara -->
 
     <!-- Section - Areas -->
     <section id="areas">
@@ -258,7 +258,7 @@
         <div class="container">
             <div class="row mx-auto justify-content-center pt-4">
                 <div class="col-md-3">
-                    <h5 class="col-12">What is sumunara?</h5>
+                    <h5 class="col-12">What is Sumunara?</h5>
 
                     <ul class="list-unstyled col-12">
                         <li>
@@ -284,7 +284,7 @@
                 </div>
 
                 <div class="col-md-3">
-                    <h5 class="col-12">What is sumunara?</h5>
+                    <h5 class="col-12">What is Sumunara?</h5>
 
                     <ul class="list-unstyled col-12">
                         <li>
@@ -310,7 +310,7 @@
                 </div>
 
                 <div class="col-md-3">
-                    <h5 class="col-12">What is sumunara?</h5>
+                    <h5 class="col-12">What is Sumunara?</h5>
 
                     <ul class="list-unstyled col-12">
                         <li>
