--- a/error.html
+++ b/error.html
@@ -16,7 +16,7 @@
     <link rel="icon" type="image/png" href="images/favicon.png">
     <link rel="stylesheet" href="./styles/style.css">
 
-    <title>Sumunara | Results</title>
+    <title>Sumunara | Error</title>
 </head>
 
 <body>
@@ -56,23 +56,41 @@
     </nav>
     <!-- Navbar -->
 
-    <!-- Results -->
-    <div id="results-container" class="container">
+    <!-- Error -->
+    <!-- <section id="error-container" class="container">
         <div>
-            <h1 id="results-title" class="text-center mb-5">
-                Here's what we found...
+            <h1 id="error-title" class="text-center mb-5">
+                Error
             </h1>
         </div>
+    </section> -->
 
-        <ul>
-            <li class="mb-3"><a href="#">住吉１丁目</a></li>
-
-            <li class="mb-3"><a href="#">住吉２丁目</a></li>
-
-            <li class="mb-3"><a href="#">住吉３丁目</a></li>
-        </ul>
+    <!-- option 1 -->
+    <section id="error-container" class="error-container">
+        <span class="four"><span class="screen-reader-text">4</span></span>
+        <span class="zero"><span class="screen-reader-text">0</span></span>
+        <span class="four"><span class="screen-reader-text">4</span></span>
+        <p class="zoom-area"><b>Oops!</b> The page you're looging for doesn't exist.</p>
+    </section>
+    <div class="link-container">
+        <a href="index.html" class="more-link">Go home</a>
     </div>
-    <!-- Results -->
+    <!-- option 1 -->
+
+    <!-- option 2 -->
+    <!-- <h1>404 Error Page #3</h1>
+    <p class="zoom-area"><b>CSS</b> animations to make a cool 404 page. </p>
+    <section class="error-container">
+        <span>4</span>
+        <span><span class="screen-reader-text">0</span></span>
+        <span>4</span>
+    </section>
+    <div class="link-container">
+        <a target="_blank" href="index.html" class="more-link">Go home</a>
+    </div> -->
+    <!-- option 2 -->
+
+    <!-- Error -->
 
     <!-- Footer -->
     <footer id="footer">
