--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg">
+    <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
             <a class="navbar-brand" href="index.html">
                 <img src="images/logo_transparent2.png" alt="sumunara logo">
@@ -62,6 +62,7 @@
             <div class="input-group mb-3">
                 <input type="text" class="form-control" placeholder="Type in postal code or address..."
                     aria-label="Type in postal code or address..." aria-describedby="basic-addon2">
+
                 <div class="input-group-append">
                     <button class="btn btn-light" type="button">
                         <img src="images/search-24px.svg" alt="search button">
@@ -142,7 +143,7 @@
                 <div class="col-lg-6">
                     <div class="media mx-auto">
                         <a href="#" class="row align-items-center">
-                            <img src="https://source.unsplash.com/400x300/?castle"
+                            <img data-src="https://source.unsplash.com/400x300/?castle"
                                 class="img-fluid col-12 col-md-6 mx-auto" alt="Generic placeholder image">
 
                             <div class="media-body row col-12 col-md-6 mx-auto">
@@ -159,8 +160,8 @@
                 <div class="col-lg-6">
                     <div class="media mx-auto">
                         <a href="#" class="row align-items-center">
-                            <img src="https://source.unsplash.com/400x300/?castle" class="img-fluid col-sm-6 mx-auto"
-                                alt="Generic placeholder image">
+                            <img data-src="https://source.unsplash.com/400x300/?forest"
+                                class="img-fluid col-sm-6 mx-auto" alt="Generic placeholder image">
 
                             <div class="media-body row col-sm-6 mx-auto">
                                 <h5 class="mt-2">Media heading</h5>
@@ -180,7 +181,7 @@
                 <div class="col-lg-6">
                     <div class="media mx-auto">
                         <a href="#" class="row align-items-center">
-                            <img src="https://source.unsplash.com/400x300/?castle"
+                            <img data-src="https://source.unsplash.com/400x300/?desert"
                                 class="img-fluid col-12 col-md-6 mx-auto" alt="Generic placeholder image">
 
                             <div class="media-body row col-12 col-md-6 mx-auto">
@@ -197,8 +198,8 @@
                 <div class="col-lg-6">
                     <div class="media mx-auto">
                         <a href="#" class="row align-items-center">
-                            <img src="https://source.unsplash.com/400x300/?castle" class="img-fluid col-sm-6 mx-auto"
-                                alt="Generic placeholder image">
+                            <img data-src="https://source.unsplash.com/400x300/?oldtown"
+                                class="img-fluid col-sm-6 mx-auto" alt="Generic placeholder image">
 
                             <div class="media-body row col-sm-6 mx-auto">
                                 <h5 class="mt-2">Media heading</h5>
@@ -218,7 +219,7 @@
                 <div class="col-lg-6">
                     <div class="media mx-auto">
                         <a href="#" class="row align-items-center">
-                            <img src="https://source.unsplash.com/400x300/?castle"
+                            <img data-src="https://source.unsplash.com/400x300/?city"
                                 class="img-fluid col-12 col-md-6 mx-auto" alt="Generic placeholder image">
 
                             <div class="media-body row col-12 col-md-6 mx-auto">
@@ -235,8 +236,8 @@
                 <div class="col-lg-6">
                     <div class="media mx-auto">
                         <a href="#" class="row align-items-center">
-                            <img src="https://source.unsplash.com/400x300/?castle" class="img-fluid col-sm-6 mx-auto"
-                                alt="Generic placeholder image">
+                            <img data-src="https://source.unsplash.com/400x300/?universe"
+                                class="img-fluid col-sm-6 mx-auto" alt="Generic placeholder image">
 
                             <div class="media-body row col-sm-6 mx-auto">
                                 <h5 class="mt-2">Media heading</h5>
@@ -357,7 +358,8 @@
 
     <!-- <script src="js/bootstrap.min.js"></script> -->
 
-    <script src="scripts/main.js"></script>
+    <script type="module" src="scripts/main.js"></script>
+    <script src="/scripts/animation.js"></script>
 </body>
 
 </html>
